# matplotlibcpp

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  basic.cpp  subplots.cpp  twinx.cpp
demo_pybind11/: CMakeLists.txt  demo_pybind11.cpp
include/: matplotlib.hpp
include/include_bits/: axes.hpp  figure.hpp  modules.hpp  plt.hpp  pycpp.hpp  utility.hpp
